# ANC_Bed_Speaker

./: .gitignore  Makefile  PROTOTYPE_PRODUCT_SPEC.md  README.md  README.root-compat.md  deploy_to_pi.sh
archive/: README.md
archive/ANC_Bed_Speaker/: .gitignore  PROTOTYPE_PRODUCT_SPEC.md  README.md  deep-research-report.md
archive/ANC_Bed_Speaker/prototype_student/: README.md  STUDENT_PROJECT_SPEC.md  main.py
config/: 98-anc-perf.conf  anc-disable-pmu-overlay.dts  anc-disable-pmu.dtbo  anc-rt.conf  config.txt.pmu.new
docs/: AGENT.md  ANC_RT_SETUP.md  README.md
docs/daily/: 2026-04-09.md  2026-04-15.md  2026-04-23.md
docs/handoff/: NEXT_SESSION_PROMPT.md
prototype_student/: AGENT.md  STUDENT_PROJECT_SPEC.md  main.py  pyproject.toml
prototype_student/anc/: baseline.py  fxlms.py  secondary_path.py
prototype_student/docs/: 일반인을_위한_프로젝트_설명서.md
prototype_student/tests/: conftest.py  test_main.py  test_measure_psd.py
prototype_student/tools/: __init__.py  measure_psd.py
runtime/: README.md
scripts/: anc-irq-affinity.sh  apply-anc-kernel-tuning.sh  loopback.py  mic_r_to_speakers.py
snoring_analysis/analysis_output/: bandpass_filtered_waveform_downsampled.csv  bandpass_summary_80_300hz.csv  dominant_frequency_hist_bins.csv  dominant_frequency_per_segment.csv  fft_summary.csv  fft_top10_peaks.csv  scatter_dominant_freq_vs_snore_index.csv  snore_index_by_file_sorted.csv  snore_index_per_segment.csv  snore_index_segment_summary.csv  snore_index_summary.csv  spectrogram_frame_summary.csv  spectrogram_summary.csv  waveform_sample_downsampled.csv  waveform_stats.csv
snoring_analysis/analysis_output/fair_comparison/: whole_vs_segmented_comparison_summary.csv  whole_vs_segmented_file_metrics.csv  (+2 more)
src/: anc.c  anc_algo.h  anc_app.c  anc_app.h  anc_defs.h  anc_dsp.h  anc_io.h  anc_log.h  anc_main.c  anc_measure.h  anc_nb.c  anc_nb.h  anc_pass.c  anc_pass.h  anc_run.c  anc_run.h  anc_sim.c  anc_sim.h  sim_compare.c  snore_anc.c
systemd/: anc-irq-affinity.service  anc-rt.service  anc-snore.service  cpu-performance.service
systemd/staging/: anc-irq-affinity.service.new  anc-irq-affinity.sh.new  anc-rt.service.new
(+18 files in other folders)
